# xswl-scpi

./: .gitignore  CMakeLists.txt  README.md  build.ps1  help.md  scpi-parser.md
examples/: CMakeLists.txt  basic_usage.cpp  custom_instrument.cpp  multichannel_dmm.cpp  oscilloscope.cpp  signal_generator.cpp
include/scpi/: command.h  command_node.h  command_splitter.h  command_tree.h  context.h  error_codes.h  error_queue.h  keywords.h  lexer.h  node_param.h  parameter.h  parser.h  path_context.h  path_resolver.h  pattern_parser.h  scpi.h  status_register.h  token.h  types.h  units.h
src/: command_node.cpp  command_splitter.cpp  command_tree.cpp  context.cpp  error_codes.cpp  error_queue.cpp  ieee488_commands.cpp  keywords.cpp  lexer.cpp  parameter.cpp  parser.cpp  path_context.cpp  path_resolver.cpp  pattern_parser.cpp  status_register.cpp  units.cpp
tests/: CMakeLists.txt  demo_phase5.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase6.cpp
